smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/mixins/resources.smithy
$version: "2.0"

namespace smithy.example

@mixin
@internal
resource MixinResource {}

resource MixedResource with [MixinResource] {}
